force-app/main/default/objects/Usage__c/fields/CO2_Used__c.field-meta.xml
<CustomField>
    <fullName>CO2_Used__c</fullName>
    <description>value calculating from flow</description>
    <label>CO₂ Emitted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>