force-app/main/default/objects/Usage__c/fields/Date_Used__c.field-meta.xml
<CustomField>
    <fullName>Date_Used__c</fullName>
    <description>When the material was used</description>
    <label>Date Used</label>
    <type>Date</type>
</CustomField>