force-app/main/default/objects/Usage__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Material</description>
    <label>Material</label>
    <referenceTo>Material__c</referenceTo>
    <relationshipLabel>Usage</relationshipLabel>
    <relationshipName>Usage</relationshipName>
    <type>Lookup</type>
</CustomField>