force-app/main/default/objects/Usage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Material__c</columns>
    <columns>Quantity__c</columns>
    <columns>CO2_Used__c</columns>
    <columns>Cost__c</columns>
    <columns>Date_Used__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>